# LearningOpenGL

./: .gitignore  CMakeLists.txt  README.md
include/: Shader.h
include/glad/: glad.h
shaders/: fragment.glsl  fragmentYellow.glsl  shader.fs.glsl  shader.vs  shader.vs.glsl  vertex.glsl
src/: Shader.cpp  glad.c  main.cpp
